--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ dependencies = [
     "numpy>=1.26.0",
     "pydantic>=2.5.0",
     "scipy>=1.11.0",
+    "polars>=0.20.0",
+    "scikit-learn>=1.4.0",
+    "catboost>=1.2.0",
+    "lightgbm>=4.3.0",
+    "joblib>=1.3.0",
 ]
 
 [project.optional-dependencies]
