--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "catboost>=1.2.0",
     "lightgbm>=4.3.0",
     "joblib>=1.3.0",
+    "mlflow>=2.9.0",
+    "openai>=1.0.0",
 ]
 
 [project.optional-dependencies]
