--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "uvicorn[standard]>=0.27.0",
     "sentence-transformers>=2.2.0",
     "pymilvus>=2.3.0",
+    "milvus-lite>=2.4.0",
     "hdbscan>=0.8.33",
     "numpy>=1.26.0",
     "pydantic>=2.5.0",
