--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
     volumes:
-      # Persist MLflow tracking data
-      - mlruns:/app/mlruns
-      # Persist Milvus vector DB data
-      - milvus_data:/app/milvus_data
+      # Persist MLflow tracking data to local host
+      - ./mlruns:/app/mlruns
+      # Persist Milvus vector DB data to local host
+      - ./data/milvus_data:/app/milvus_data
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
       interval: 30s
