refactor: fix code quality issues from code review
- Fix NameError bug in evaluation _generate_improved_response
- Switch from sync OpenAI to AsyncOpenAI in evaluation service
- Extract duplicated get_top_factors into OutcomePredictor base class
- Add is_initialized property to services, fix encapsulation violations
- Standardize singleton pattern across PromptService and EvaluationService
- Standardize error handling (ValueError→400) across all routers
- Move inline datetime import to top-level in prediction router
- Remove unused NATURALNESS_RUBRIC import
- Move faker to dev dependencies
- Fix Docker volume mapping to match PromptService.DB_PATH
- Remove stale named volumes from docker-compose
- Update FastAPI title/description to reflect all case studies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       # Persist MLflow tracking data to local host
       - ./mlruns:/app/mlruns
       # Persist Milvus vector DB data to local host
-      - ./data/milvus_data:/app/milvus_data
+      - ./data:/app/data
     healthcheck:
       test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
       interval: 30s
@@ -19,7 +19,3 @@ services:
       retries: 3
       start_period: 30s
     restart: unless-stopped
-
-volumes:
-  mlruns:
-  milvus_data:
