--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "lightgbm>=4.3.0",
     "joblib>=1.3.0",
     "mlflow>=2.9.0",
-    "openai>=1.0.0",
+    "litellm>=1.30.0",
 ]
 
 [project.optional-dependencies]
